2005-11-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-unknown-freebsd6.0 (RELEASE)

2005-10-26  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/amq_subr.c (amqproc_pawd_1_svc): repeatedly resolve path in
	Amd, not in pawd (to avoid repeated network RPCs).

	* amq/pawd.c (transform_dir): move repeated path resolution into Amd.

2005-10-25  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (transform_dir): resolve path repeatedly until
	finished.  Bug fix from Jonathan Chen <jon+amd-at-spock.org>.
	Added safety check to prevent infinite loops.

2005-10-19  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi (opts Option): document new pcfs options
	longname, nowin95, shortname, user=N, group=N, mask=N, and
	dirmask=N.

	* amd/ops_pcfs.c (mount_pcfs): process new pcfs options longname,
	nowin95, shortname, user=N, group=N, mask=N, and dirmask=N.

	* include/am_compat.h: provide compatibility mnttab string names,
	if needed, for pcfs mount options longname, nowin95, shortname,
	user=N, group=N, mask=N, and dirmask=N.

	* include/am_utils.h: extern for hasmntstr().

	* libamu/mtab.c (hasmntstr): new function to return the string
	value following a mount option, up to the next comma-delimited
	options.

	* configure.in: check for mnttab and pcfs options longname,
	nowin95, and shortname.

	* Makefile.am (EXTRA_DIST_M4): distribute new macro
	check_mnt2_pcfs_opt.m4.

	* m4/macros/check_mnt2_pcfs_opt.m4: new macro to check for pcfs
	mnttab and mount options.

2005-10-18  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/mount_fs.c (print_nfs_args): print nfs_args->addr
	correctly, depending if it's a pointer or not.

	* conf/sa_dref/sa_dref_*.h: for each NFS_SA_DREF macro, also
	#define NFS_ARGS_T_ADDR_IS_POINTER if nfs_args->addr is a pointer
	or an embedded structure, so we can tell how to print it.

	* libamu/mount_fs.c (print_nfs_args): print nfs_args->addrlen
	field, if it exists.

	* configure.in: check for nfs_args->addrlen field.
